--- a/date_machine/javascript/tests/test.html
+++ b/date_machine/javascript/tests/test.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>QUnit Example</title>
-  <link rel="stylesheet" href="qunit/qunit.css">
+  <title>QUnit</title>
+  <link rel="stylesheet" href="qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="qunit/qunit.js"></script>
+  <script src="qunit.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
