--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@ parser_description = [{"regex": "(?:(?:(?:([0]?[1-9]|1[0-2])[:\\.]([0-5][0-9])(?
             </tr>
             <tr>
                 <th>Date Formats</th>
-                <td>39 tested</td>
+                <td>14 tested</td>
 
             </tr>
         </table>
     </div>
     <div>
         <h2 id="source_download">Source/<br />Download</h2>
-        <iframe src="http://asperous.github.io/github-buttons/github-btn.html?user=asperous&repo=pipeless&type=view&size=large"
+        <iframe src="http://asperous.github.io/github-buttons/github-btn.html?user=asperous&repo=date_machine&type=view&size=large"
                 allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
         <br />
         <a href="https://travis-ci.org/asperous/date_machine" class="build_status">
         <img alt="Build Status"
-                 src="https://travis-ci.org/asperous/pipeless.png?branch=master"
+                 src="https://travis-ci.org/asperous/date_machine.png?branch=master"
                  style="max-width:100%;"></a>
     </div>
 </div>
