--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ pre.usage {margin-top: 18px; }
                 results_data.innerHTML = '';
             } else {
                 try {
-                    var output = this.date_machine(input.value)
+                    var output = this.dateMachine(input.value)
                     results_header.style.display = 'inherit';
                     results_data.innerHTML = obj_to_table(output);
                  } catch(err) {
@@ -135,12 +135,12 @@ parser_description = [{"regex": "(?:(?:(?:([0]?[1-9]|1[0-2])[:\\.]([0-5][0-9])(?
         </table>
     </div>
     <div><h2 id="download">Download</h2>
-        <a href="date_machine.js">.js</a><br />
+        <a href="dateMachine.js">.js</a><br />
         <a href="https://github.com/asperous/date_machine/archive/master.zip">.zip</a>
         <pre>pip install date_machine</pre>
     </div>
     <div><h2 id="usage">Usage</h2>
-        <pre class="usage">JS: this.date_machine('Jan 2');
+        <pre class="usage">JS: this.dateMachine('Jan 2');
 Py: date_machine.parse('Jan 2')</pre>
     </div>
     <div>
