--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
     <title>Date Machine: The last date parser</title>
-    <meta name="description" content="Date Machine: The last date parser"/>
+    <meta name="description" content="Python and Javascript natural language date parser" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <link rel="icon" href="http://asperous.github.io/date_machine/favicon.ico" type="image/x-icon">
@@ -49,7 +49,7 @@ a:hover {background-color: rgba(0, 0, 0, 0.21);}
 pre {font-size: 10pt;}
 pre.usage {margin-top: 18px; }
     </style>
-        <script type="text/javascript" src="date_machine.js"></script>
+        <script type="text/javascript" src="dateMachine.js"></script>
         <script type="text/javascript">
         function obj_to_table(input_list) {
            var out = '';
