--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="description" content="Python and Javascript natural language date parser" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <link rel="icon" href="http://asperous.github.io/date_machine/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="http://asperous.github.io/date_machine/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://andychase.me/date_machine/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="http://andychase.me/date_machine/favicon.ico" type="image/x-icon">
     <link href='normalize.css' rel='stylesheet' type='text/css'/>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
 
@@ -136,7 +136,7 @@ parser_description = [{"regex": "(?:(?:(?:([0]?[1-9]|1[0-2])[:\\.]([0-5][0-9])(?
     </div>
     <div><h2 id="download">Download</h2>
         <a href="dateMachine.js">.js</a><br />
-        <a href="https://github.com/asperous/date_machine/archive/master.zip">.zip</a>
+        <a href="https://github.com/andychase/date_machine/archive/master.zip">.zip</a>
         <pre>pip install date_machine</pre>
     </div>
     <div><h2 id="usage">Usage</h2>
@@ -145,12 +145,12 @@ Py: date_machine.parse('Jan 2')</pre>
     </div>
     <div>
         <h2 id="source_download">Source</h2>
-        <iframe src="https://asperous.us/github-buttons/github-btn.html?user=asperous&repo=date_machine&type=view&size=large"
+        <iframe src="https://andychase.me/github-buttons/github-btn.html?user=andychase&repo=date_machine&type=view&size=large"
                 allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
         <br />
-        <a href="https://travis-ci.org/asperous/date_machine" class="build_status">
+        <a href="https://travis-ci.org/andychase/date_machine" class="build_status">
         <img alt="Build Status"
-                 src="https://travis-ci.org/asperous/date_machine.png?branch=master"
+                 src="https://travis-ci.org/andychase/date_machine.png?branch=master"
                  style="max-width:100%;"></a>
     </div>
 </div>
