Add 14 formats to homepage

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ parser_description = [{"regex": "(?:(?:(?:([0]?[1-9]|1[0-2])[:\\.]([0-5][0-9])(?
             </tr>
             <tr>
                 <th>Date Formats</th>
-                <td>14 tested</td>
+                <td><a href="https://github.com/andychase/date_machine/blob/master/date_machine/test/corpus.py">14 tested</a></td>
 
             </tr>
         </table>
