--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <link rel="icon" href="https://andychase.me/date_machine/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="http://andychase.me/date_machine/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://andychase.me/date_machine/favicon.ico" type="image/x-icon">
     <link href='normalize.css' rel='stylesheet' type='text/css'/>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
 
     <style type="text/css">
 body { background-color: #3D7194; font-family: "Roboto Slab", Arial, sans-serif; }
